fix z-index on dates

--- a/app/javascript/pages/map/recent-imagery/components/recent-imagery-settings/recent-imagery-settings-styles.scss
+++ b/app/javascript/pages/map/recent-imagery/components/recent-imagery-settings/recent-imagery-settings-styles.scss
@@ -53,7 +53,7 @@
     width: 100%;
     padding: 0 rem(20px);
     vertical-align: top;
-    z-index: 2;
+    z-index: 4;
 
     &__title {
       margin-bottom: rem(10px);
